[package]
name = "rusts3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
structopt = "0.3.26"
tokio = { version = "1.24.1", features = ["full"] }
tracing-subscriber = "0.3.16"
