[package]
name = "ezup"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-all", "fs-all", "global-shortcut-all", "notification-all", "path-all", "shell-open", "system-tray", "updater"] }
aws-config = "0.52.0"

tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
imgurs = "0.11.1"
aws-sdk-s3 = "0.22.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
arboard = "3.2.0"
image = "0.24.5"
uuid = "1.2.2"
tempfile = "3.3.0"
error-chain = "0.12.4"
reqwest = {version="0.11.13", features= ["json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
